--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +19,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  font-size: medium;
+  padding: 6px 10px;;
 }
 
 input {
@@ -23,4 +28,44 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header,.footer{
+  min-height:40px;
+  padding:20px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 16px;
+}
+
+a{
+  text-decoration: none;
+  color:grey;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+
+.buttons{
+  flex: 1;
+  margin-top: 10px;
+}
+
+.footer{
+  display:flex;
+  justify-content:space-between;
+  background-color: #eee;
+  
 }
