--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: bolder;
+  text-align: left;
+  align-content: center;
+  padding-left: 2%;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-content:center;
+  text-align:center;
+  padding: 5px 20px;
+}
+
+.maincontent{
+  display: flex;
+  flex: 1;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex: 1 1 300;
+}
+
+.cards{
+  flex: 1;
+  display: flex;
+  margin: 5%;
+  gap: 3%;
+}
+
+.col{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 3%;
 }
 
 .card {
+  flex: 1;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 5%;
+}
+
+ul{
+  list-style-type:none;
+  font-size: large;
+  align-items: left;
+  padding: 2%;
+  margin: 0;
+}
+
+li{
+  margin: 6px;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
